# kalshi-weather-v2

./: .env.example  LICENSE  README.md  pyproject.toml
app/: backtest.py  cache.py  config.py  db.py  kalshi_client.py  kalshi_websocket_client.py  main.py  models.py  paper_engine.py  scanner.py  strategy.py
app/templates/: _opportunities_table.html  backtest_detail.html  backtests.html  dashboard.html  market_detail.html  paper_positions.html  paper_trades.html
docs/: assumptions.md
tests/: test_api.py  test_backtest.py  test_kalshi_client.py  test_paper_api.py  test_paper_engine.py  test_strategy.py  test_websocket_parsing.py  test_ws_backoff.py  test_ws_cache.py
tests/fixtures/: markets_response.json  orderbook_response.json
